docs: pixel-streaming plan rewrite (Option 2: explicit test specs)
The v1 plan (PR #33) leaned on "existing tests still pass" plus a few
hand-described smoke checks. The implementing agent could mark each
phase's gate green without adding any refactor-specific test coverage.
Underspecified for a multi-week multi-PR architectural change.

This rewrite (Option 2 from chat) makes test obligations explicit per
phase:

- New Phase B inserted up-front for shared test infrastructure
  (LargeDicomFixtureFactory, HeapBounds helper, Sha256Checksum helper,
  JMH harness, forbiddenApis lint rule, CI regression gate). Phases C-E
  consume these helpers.

- Phases C-E each gain a "Required tests" section listing concrete test
  classes, test methods, and the assertion shape each method must have.
  ~15 new test classes, ~50 new test methods total. Verification gates
  reference test classes by name so the gate cannot be marked green
  without the tests existing and passing.

- Phase F slimmed to "publish + lock" - run benchmarks, write ADR 0009,
  confirm CI regression gates fire on synthetic regression PRs.

- Cross-phase summary table at the bottom listing every deliverable test
  in one place for the implementing agent's punch-list.

Phase letter renumbered: A unchanged, new B (test infra), C/D/E
correspond to v1's B/C/D, F is the v1 E. Existing PR descriptions
that reference "Phase B" or "Phase C" by letter are now stale; the
plan is the source of truth.